# high-res-ocean-data-viz-prototype

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: glorys12_sst_demo.yaml
notebooks/: 01_glorys12_sst_snapshot.ipynb  02_glorys12_sst_movie.ipynb  03_variable_smoke_tests.ipynb
ocean_viz/: __init__.py  animation.py  cli.py  config.py  dataset_adapters.py  dataset_loader.py  derived.py  diagnostics.py  plotting.py  pyproject.toml  requirements.txt  variables.py
ocean_viz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ocean_viz/configs/: glorys12_sst_demo.yaml
ocean_viz/notebooks/: 01_glorys12_sst_snapshot.ipynb  02_glorys12_sst_movie.ipynb  03_variable_smoke_tests.ipynb
ocean_viz/ocean_viz/: __init__.py  animation.py  cli.py  config.py  dataset_adapters.py  dataset_loader.py  derived.py  diagnostics.py  plotting.py  variables.py
ocean_viz/scripts/: run_movie.py  run_snapshot.py
ocean_viz/tests/: test_config.py  test_derived.py  test_longitude.py  test_render_synthetic.py  test_smoke_dependencies.py  test_surface_selector.py
scripts/: run_movie.py  run_snapshot.py
tests/: __init__.py  test_config.py  test_derived.py  test_longitude.py  test_smoke_dependencies.py
